# django-schema-query

./: .gitignore  README.rst  setup.cfg  tox.ini
schema_query/: __init__.py  deletion.py  managers.py  models.py  options.py  query.py  queryset.py
tests/: models.py  settings.py  tests.py
tests/migrations/: 0001_initial.py
