[metadata]
name = django-schema-query
version = attr: schema_query.VERSION
description = Django application exposing primitives ORM binding for PostgreSQL schemas.
keywords = django postgresql schema
license = MIT License
url = https://github.com/charettes/django-schema-query
author = Simon Charette
author_email = charette.s@gmail.com
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = schema_query

[wheel]
universal = 1

[coverage:run]
source = schema_query
branch = 1

[flake8]
exclude=.tox,.git,*/migrations/*
max-line-length = 119

[isort]
known_third_party=django
combine_as_imports=true
include_trailing_comma=true
multi_line_output=5
not_skip=__init__.py
